--- a/LongplayWeb/LongplayWeb.csproj
+++ b/LongplayWeb/LongplayWeb.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>9d968b70-1ace-41c5-9f49-6051557a88db</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
