--- a/LongplayWeb/LongplayWeb.csproj
+++ b/LongplayWeb/LongplayWeb.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="MyTested.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Longplay.DataAccess\Longplay.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
